@@ -8,6 +8,9 @@ Next Release
   go, to prevent holding the transaction lock for longer than absolutely
   necessary.
 
+- Fix object reference downloading performance for large Oracle RelStorage
+  database during the garbage collection phase of a pack.
+
 1.5.0b2 (2011-03-02)
 --------------------
 
